Fix Windows build